--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,28 @@
 .app{
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-content: center;
+  align-items: center;
+  padding:40px 24px;
+}
+
+.app__searchForm{
+  margin-top:18px;
+}
+
+.app__input{
+  padding: 6px 16px;
+  min-width: 200px;
+  max-width: 100vw;
+  font-size:15px;
+}
+
+.app__submit{
+  padding: 6px 16px;
+  font-size:15px;
+  margin-left: 6px;
+  background-color: #02aff0;
+  border:2px solid #02aff0;
+  border-radius: 4px;
+  color:white;
 }
