--- a/src/App.css
+++ b/src/App.css
@@ -25,4 +25,29 @@
   border:2px solid #02aff0;
   border-radius: 4px;
   color:white;
+  cursor: pointer;
+}
+
+.app__submit:hover{
+  padding: 6px 16px;
+  font-size:15px;
+  margin-left: 6px;
+  background-color: white;
+  border:2px solid #02aff0;
+  border-radius: 4px;
+  color:#02aff0;
+  cursor: pointer;
+}
+
+.app__recipes{
+  display: grid;
+  margin-top: 24px;
+  grid-template-columns:230px 230px;
+  align-items: baseline;
+}
+
+.app__healthLabels{
+  padding:7px 8px;
+  margin-left: 6px;
+  border-radius: 4px;
 }
